--- a/_posts/0000-01-02-HelloHello9231.md
+++ b/_posts/0000-01-02-HelloHello9231.md
@@ -1,6 +1,6 @@
-<h1>File</h1>
-
-<ul>
-<li>Test</li>
-<li>Test</li>
-</ul>
+---
+layout: slide
+title: "Welcome to our second slide!"
+---
+Your text
+Use the left arrow to go back!
